syntax = "proto3";

option go_package = "github.com/chainguard-dev/terraform-infra-common/pkg/workqueue";

package chainguard.workqueue;

service WorkqueueService {
  rpc Process(ProcessRequest) returns (ProcessResponse) {}
}

message ProcessRequest {
  // The key of the work item
  string key = 1;

  // The (optional) priority of the work item, where higher numbers are processed first.
  int64 priority = 2;

  // The (optional) delay in second to wait before processing the work item.
  int64 delay_seconds = 3;
}

message ProcessResponse {
  // Optional: If set, indicates the work item should be requeued after the specified delay.
  // If not set or 0, the default behavior applies (success if no error, or exponential backoff on error).
  // This field is only honored when the RPC returns successfully (no error).
  int64 requeue_after_seconds = 1;
}

// NoRetryDetails is a marker message that indicates that the key should not be retried.
message NoRetryDetails {
  string message = 1; // A message describing why the key should not be retried.
}
